--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1>Chan Thieng Tang</h1>
+				<h1>This is an update content</h1>
 				<p>Student &nbsp;&bull;&nbsp; La Trobe University </p>
 				<nav>
 					<ul>
